# EsaySense

./: Dockerfile  README  README.md  docker容器时传参.txt
algorithm/algorithm_new/: CMakeLists.txt
algorithm/algorithm_new/AlgorithmicIntegration/: AlarmInterface.cpp  AlarmInterface.h  AlgorithmInterface.cpp  AlgorithmInterface.h  AlgorithmicIntegration.cpp  CMakeLists.txt  Config.cpp  IPython.cpp  IPython.h  InterfaceInterface.cpp  RedisAgent.h  RedisInterface.cpp  RedisInterface.h  UploadInterface.cpp  WorkerThread.cpp  WorkerThread.h  socketReciver.h
algorithm/algorithm_new/AlgorithmicIntegration/Utils/: alarm_define.h  cm_argv_parse.cpp  cm_buffer_pool.cpp  cm_string_coding.cpp  cm_string_operation.cpp  cm_string_operation.h  systime.h
algorithm/algorithm_new/AlgorithmicIntegration/include/: CMakeLists.txt  LiquidLevelAlgorithm.hpp  image.c
algorithm/algorithm_new/Libs/include/: NetLibSDK.h  mqlib.h  transferlib.h
algorithm/include/: mqlib.h  transferlib.h
algorithm/include/ffmpeg/bak/libavutil/: common.h
algorithm/include/live555/liveMedia/: H264VideoStreamFramer.hh  H265VideoStreamFramer.hh
algorithm/libs/: libavcodec.so.58  libavformat.so.58.12.100  libmq.so.bak  librabbitmq.a.bak  libswresample.so.3.1.100  testmeta
algorithm/libs/ffmpeg/: libswscale.so.5
algorithmimage/algorithm/algorithm_new/AlgorithmicIntegration/: AlgorithmInterface.cpp  AlgorithmInterface.h  AlgorithmicIntegration.cpp  Common.h  Config.cpp  Config.h  IPython.cpp  IPython.h  InterfaceInterface.h  InterfaceModel.cpp  InterfaceModel.h  Makefile  RedisAgent.cpp  RedisInterface.cpp  SettingConfig.ini  UploadInterface.cpp  UploadInterface.h  WorkerThread.cpp  WorkerThread.h  mutex.h  myThread.h  pic_mgr.cpp  pic_mgr.h  socketReciver.h
algorithmimage/algorithm/algorithm_new/AlgorithmicIntegration/Utils/: cm_argv_parse.h  cm_buffer_pool.h  cm_disk_operation.h  cm_file_operation.cpp  cm_file_operation.h  cm_time.h.gch  inifile.cpp  inifile.h
algorithmimage/algorithm/algorithm_new/AlgorithmicIntegration/include/: JIAlgorithm.hpp  SmokeDetectAlgorithm.hpp  Untitled Document  box.h  darknet.h  image.h  network.h  pubKey.h  roi.h
algorithmimage/algorithm/algorithm_new/Libs/include/: NetProtocol.h
algorithmimage/algorithm/include/live555/liveMedia/: H264or5VideoStreamFramer.hh
algorithmimage/algorithm/libs/: libavutil.so.56.14.100  qcd  serviceInfo.ini
algorithmimage/foundation/: requirements.txt
examples/: README.md
examples/tensorflow-yolov3/: README.md  save_model.py
examples/tensorflow-yolov3-client/: setup.py  yolov3ClientModule.py  yolov3ClientModule_test.py
